changed to pincode

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ body{
 <head>
     <script>
         let config = {
-            searchByDistrict: true,//true if want to search by district ID,false if search by pincode
+            searchByDistrict: false,//true if want to search by district ID,false if search by pincode
             districtId: 663,//district ID to be assigned
-            searchByPinCode: false,//true if want to search by pincode,false if search by district ID
-            pinCode: 209302, //search area pincode
+            searchByPinCode: true,//true if want to search by pincode,false if search by district ID
+            pinCode: 560100, //search area pincode
             checkTimeInterval: 15,//unit in seconds <integer>
             minAgeLimit: 18,   // 18,45 keep any of these values
             minAvailableCapacity: 1,
