--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ body{
 <head>
     <script>
         let config = {
-            searchByDistrict: false,//true if want to search by district ID,false if search by pincode
-            districtId: 663,//district ID to be assigned
-            searchByPinCode: true,//true if want to search by pincode,false if search by district ID
+            searchByDistrict: true,//true if want to search by district ID,false if search by pincode
+            districtId: 294,//district ID to be assigned
+            searchByPinCode: false,//true if want to search by pincode,false if search by district ID
             pinCode: 560100, //search area pincode
             checkTimeInterval: 10,//unit in seconds <integer>
             minAgeLimit: 18,   // 18,45 keep any of these values for age in years
@@ -147,8 +147,7 @@ body{
     <br/>
     <div id="demo"></div>
     <audio style="visibility:hidden" id="myAudio" controls>
-        <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
-        <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
+        <source src="http://www.hochmuth.com/mp3/Tchaikovsky_Rococo_Var_orch.mp3" type="audio/mpeg">
     </audio>
     <script>startChecking();</script>
 </body>
