--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ body{
                         html += "<tr><th>Center ID</th><th>Hospital</th><th>Address</th><th>State</th><th>District</th><th>Pincode</th><th>Capacity</th><th>Vaccine</th><th>Dates</th></tr>";
                         for (var i = 0; i < rows.length; i++) {
                             if(rows[i].date != getTodayDate()){
-                                html += "<tr style='background:#E5F5F1'>";
+                                html += "<tr style='background:#4ae8a6'>";
                             }else{
-                                html += "<tr>";
+                                html += "<tr style='background:#F9C882'>";
                             }
                             
                             html += "<td>" + rows[i].center_id + "</td>";
