--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ body{
     <script>
         let config = {
             searchByDistrict: true,//true if want to search by district ID,false if search by pincode
-            districtId: 294,//district ID to be assigned
+            districtId: 663,//district ID to be assigned
             searchByPinCode: false,//true if want to search by pincode,false if search by district ID
             pinCode: 560100, //search area pincode
             checkTimeInterval: 10,//unit in seconds <integer>
-            minAgeLimit: 18,   // 18,45 keep any of these values for age in years
+            minAgeLimit: [18,45],   // 18,45 keep any of these values for age in years,both can also be kept
             minAvailableCapacity: 1,
             autoDatePick:true, //if want to search by todays date and future dates,false if providing any custom date
             customDate:""//format in DD-MM-YYYY in <string>
@@ -76,7 +76,7 @@ body{
                         let jsonData = JSON.parse(Http.response);
                         jsonData.centers.forEach(obj => {
                             obj.sessions.forEach(item => {
-                                if (item.available_capacity >= config.minAvailableCapacity && item.min_age_limit >= config.minAgeLimit) {
+                                if (item.available_capacity >= config.minAvailableCapacity && config.minAgeLimit.indexOf(item.min_age_limit)>-1) {
                                     let newObj = {
                                         "center_id": obj.center_id,
                                         "name": obj.name,
@@ -89,6 +89,7 @@ body{
                                         "slots":item.slots,
                                         "available_capacity": item.available_capacity,
                                         "vaccine": item.vaccine,
+                                        "age":item.min_age_limit,
                                         "dates": JSON.stringify(item.slots)
                                     };
                                     availableSlots.push(newObj);
@@ -100,7 +101,7 @@ body{
                         playAudio();
                         let rows = availableSlots;
                         let html = "<table border='1|1'>";
-                        html += "<tr><th>Center ID</th><th>Hospital</th><th>Address</th><th>State</th><th>District</th><th>Pincode</th><th>Capacity</th><th>Vaccine</th><th>Dates</th></tr>";
+                        html += "<tr><th>Center ID</th><th>Hospital</th><th>Address</th><th>State</th><th>District</th><th>Pincode</th><th>Date</th><th>Capacity</th><th>Vaccine</th><th>Age</th></tr>";
                         for (var i = 0; i < rows.length; i++) {
                             if(rows[i].date != getTodayDate()){
                                 html += "<tr style='background:#4ae8a6'>";
@@ -117,7 +118,7 @@ body{
                             html += "<td>" + rows[i].date + "</td>";
                             html += "<td>" + rows[i].available_capacity + "</td>";
                             html += "<td>" + rows[i].vaccine + "</td>";
-                            html += "<td>" + rows[i].slots + "</td>";
+                            html += "<td>" + rows[i].age + "</td>";
                             html += "</tr>";
 
                         }
