--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body{
     <script>
         let config = {
             searchByDistrict: true,//true if want to search by district ID,false if search by pincode
-            districtId: 663,//district ID to be assigned
+            districtId: 294,//district ID to be assigned
             searchByPinCode: false,//true if want to search by pincode,false if search by district ID
             pinCode: 560100, //search area pincode
             checkTimeInterval: 10,//unit in seconds <integer>
@@ -90,7 +90,8 @@ body{
                                         "available_capacity": item.available_capacity,
                                         "vaccine": item.vaccine,
                                         "age":item.min_age_limit,
-                                        "dates": JSON.stringify(item.slots)
+                                        "dates": JSON.stringify(item.slots),
+                                        "fee_type":obj.fee_type
                                     };
                                     availableSlots.push(newObj);
                                 }
@@ -101,7 +102,7 @@ body{
                         playAudio();
                         let rows = availableSlots;
                         let html = "<table border='1|1'>";
-                        html += "<tr><th>Center ID</th><th>Hospital</th><th>Address</th><th>State</th><th>District</th><th>Pincode</th><th>Date</th><th>Capacity</th><th>Vaccine</th><th>Age</th></tr>";
+                        html += "<tr><th>Center ID</th><th>Hospital</th><th>Address</th><th>State</th><th>District</th><th>Pincode</th><th>Date</th><th>Capacity</th><th>Vaccine</th><th>Age</th><th>Fees</th></tr>";
                         for (var i = 0; i < rows.length; i++) {
                             if(rows[i].date != getTodayDate()){
                                 html += "<tr style='background:#4ae8a6'>";
@@ -119,6 +120,7 @@ body{
                             html += "<td>" + rows[i].available_capacity + "</td>";
                             html += "<td>" + rows[i].vaccine + "</td>";
                             html += "<td>" + rows[i].age + "</td>";
+                            html += "<td>" + rows[i].fee_type + "</td>";
                             html += "</tr>";
 
                         }
