removed auto check on page load to avoid chrome policy of muted music play

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@ body{
 <body>
     <button onclick="startChecking()">Start checking</button>
     <button onclick="stopChecking()">Stop checking</button>
+    <br/>
+    <div style="font-size:20px">Click on start checking button</div>
     <br/><br/>
     <div id="loadingData"></div>
     <br/>
@@ -163,7 +165,7 @@ body{
     <audio style="visibility:hidden" id="myAudio" controls>
         <source src="http://www.hochmuth.com/mp3/Tchaikovsky_Rococo_Var_orch.mp3" type="audio/mpeg">
     </audio>
-    <script>startChecking();</script>
+    
 </body>
 
 </html>
