changes to music file link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body{
     <br/>
     <div id="demo"></div>
     <audio style="visibility:hidden" id="myAudio" controls>
-        <source src="http://www.hochmuth.com/mp3/Tchaikovsky_Rococo_Var_orch.mp3" type="audio/mpeg">
+        <source src="https://www.soundjay.com/button/sounds/beep-02.mp3" type="audio/mpeg">
     </audio>
     
 </body>
