--- a/home.html
+++ b/home.html
@@ -23,8 +23,8 @@ body{
             checkTimeInterval: 10,//unit in seconds <integer>
             minAgeLimit: [18,45],   // 18,45 keep any of these values for age in years,both can also be kept
             minAvailableCapacity: 1,
-            autoDatePick:true, //if want to search by todays date and future dates,false if providing any custom date
-            customDate:""//format in DD-MM-YYYY in <string>
+            autoDatePick:false, //if want to search by todays date and future dates,false if providing any custom date
+            customDate:"17-05-2021"//format in DD-MM-YYYY in <string>
         }
         
         let timerVal;
